--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
   "devDependencies": {
     "@dicebear/avatars": "^4.10.0",
     "@dicebear/avatars-avataaars-sprites": "^4.10.0",
+    "@egjs/svelte-infinitegrid": "^4.1.1",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "loerem": "^1.0.2",
-    "node-sass": "^6.0.1",
-    "ouml": "^0.0.4",
+    "node-sass": "npm:sass@^1.43.4",
+    "ouml": "^0.0.7",
+    "postcss": "^8.3.11",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-postcss": "^4.0.1",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "sirv-cli": "^1.0.0",
     "svelte": "^3.42.4",
-    "svelte-masonry": "^0.0.18",
-    "svelte-preprocess": "^4.9.5"
+    "svelte-preprocess": "^4.9.8"
   }
 }
